[gd_scene load_steps=3 format=3 uid="uid://dbp7khde2xwjq"]

[ext_resource type="Script" path="res://Scripts/Control.gd" id="1_qfw87"]
[ext_resource type="FontFile" uid="uid://cd1ckfx8v10ix" path="res://Sprites/comic_sana.ttf" id="3_wkx8y"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qfw87")
metadata/_edit_lock_ = true

[node name="Esquema1" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.392157)
scale = Vector2(1.5, 1.5)
centered = false
metadata/_edit_lock_ = true

[node name="Mascara" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0.00392157)
layout_mode = 0
offset_left = -1400.0
offset_top = -180.0
offset_right = 1286.0
offset_bottom = 806.0
metadata/_edit_lock_ = true

[node name="Lineas" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="Libro" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="Esquema2" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.784314)
scale = Vector2(0.192485, 0.343828)
centered = false
metadata/_edit_lock_ = true

[node name="Menu" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="BotExpHojas" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 19.0
offset_top = 21.0
offset_right = 134.0
offset_bottom = 69.0
focus_mode = 0
theme_override_fonts/font = ExtResource("3_wkx8y")
theme_override_font_sizes/font_size = 18
text = "Exp Hojas"
metadata/_edit_lock_ = true

[node name="BotExpDocum" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 148.0
offset_top = 21.0
offset_right = 263.0
offset_bottom = 69.0
focus_mode = 0
theme_override_fonts/font = ExtResource("3_wkx8y")
theme_override_font_sizes/font_size = 18
text = "Exp Docum"
metadata/_edit_lock_ = true

[node name="BotExpDatos" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 277.0
offset_top = 23.0
offset_right = 392.0
offset_bottom = 71.0
focus_mode = 0
theme_override_fonts/font = ExtResource("3_wkx8y")
theme_override_font_sizes/font_size = 18
text = "Exp Datos"
metadata/_edit_lock_ = true

[node name="BotImpDatos" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 404.0
offset_top = 23.0
offset_right = 519.0
offset_bottom = 71.0
focus_mode = 0
theme_override_fonts/font = ExtResource("3_wkx8y")
theme_override_font_sizes/font_size = 18
text = "Imp Datos"
metadata/_edit_lock_ = true

[node name="Comandos" type="Label" parent="Menu"]
layout_mode = 0
offset_left = 18.0
offset_top = 85.0
offset_right = 262.0
offset_bottom = 134.0
theme_override_fonts/font = ExtResource("3_wkx8y")
theme_override_font_sizes/font_size = 16
text = "- Tab: create hoja
- delete hoja if no title nor conections
- save all when hoja lost focus
- shift + clic in hoja to make it red
- Esc: see front image
- connect hoja with self to disconect
                            hide No titles
                            hide No contents
                            hide if no Ok"
metadata/_edit_lock_ = true

[node name="BotEjecutar" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 28.0
offset_top = 380.0
offset_right = 181.0
offset_bottom = 428.0
focus_mode = 0
theme_override_fonts/font = ExtResource("3_wkx8y")
theme_override_font_sizes/font_size = 18
text = "Simulate"
metadata/_edit_lock_ = true

[node name="Actual" type="Label" parent="Menu"]
layout_mode = 0
offset_left = 29.0
offset_top = 437.0
offset_right = 95.0
offset_bottom = 468.0
theme_override_fonts/font = ExtResource("3_wkx8y")
theme_override_font_sizes/font_size = 18
text = "0 %"
horizontal_alignment = 2
metadata/_edit_lock_ = true

[node name="Iteraciones" type="TextEdit" parent="Menu"]
layout_mode = 0
offset_left = 104.0
offset_top = 435.0
offset_right = 181.0
offset_bottom = 473.0
theme_override_fonts/font = ExtResource("3_wkx8y")
placeholder_text = "Iterar"
caret_blink = true
metadata/_edit_lock_ = true

[node name="IteraIni" type="TextEdit" parent="Menu"]
layout_mode = 0
offset_left = 24.0
offset_top = 335.0
offset_right = 101.0
offset_bottom = 373.0
theme_override_fonts/font = ExtResource("3_wkx8y")
placeholder_text = "Ind Ini"
caret_blink = true
metadata/_edit_lock_ = true

[node name="IteraFin" type="TextEdit" parent="Menu"]
layout_mode = 0
offset_left = 107.0
offset_top = 336.0
offset_right = 184.0
offset_bottom = 374.0
theme_override_fonts/font = ExtResource("3_wkx8y")
placeholder_text = "Ind Fin"
caret_blink = true
metadata/_edit_lock_ = true

[node name="Resultados" type="Label" parent="Menu"]
layout_mode = 0
offset_left = 26.0
offset_top = 488.0
offset_right = 181.0
offset_bottom = 640.0
theme_override_fonts/font = ExtResource("3_wkx8y")
theme_override_font_sizes/font_size = 16
text = "Result:"
metadata/_edit_lock_ = true

[node name="VerImg" type="CheckButton" parent="Menu"]
layout_mode = 0
offset_left = 541.0
offset_top = 24.0
offset_right = 585.0
offset_bottom = 54.0
scale = Vector2(1.5, 1.5)
focus_mode = 0
metadata/_edit_lock_ = true

[node name="SinTitulos" type="HSlider" parent="Menu"]
self_modulate = Color(1, 0.478431, 0.478431, 1)
layout_mode = 0
offset_left = 18.0
offset_top = 249.0
offset_right = 142.0
offset_bottom = 265.0
max_value = 255.0
value = 255.0
rounded = true
scrollable = false
metadata/_edit_lock_ = true

[node name="SinTextos" type="HSlider" parent="Menu"]
self_modulate = Color(0.439216, 0.682353, 0.92549, 1)
layout_mode = 0
offset_left = 18.0
offset_top = 272.0
offset_right = 142.0
offset_bottom = 288.0
max_value = 255.0
value = 255.0
rounded = true
scrollable = false
metadata/_edit_lock_ = true

[node name="SinOk" type="HSlider" parent="Menu"]
self_modulate = Color(1, 1, 0, 1)
layout_mode = 0
offset_left = 19.0
offset_top = 296.0
offset_right = 143.0
offset_bottom = 312.0
max_value = 255.0
value = 255.0
rounded = true
scrollable = false
metadata/_edit_lock_ = true

[node name="Plantillas" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="HojaInicio" type="TextEdit" parent="Plantillas"]
layout_mode = 0
offset_left = -1221.0
offset_top = 23.0
offset_right = -1012.0
offset_bottom = 587.0
theme_override_fonts/font = ExtResource("3_wkx8y")
text = "(aquí inicia esta historia, para obtener más información diríjase a: ???)

#N - #TT

#TC

> Siguiente: #A"
context_menu_enabled = false
wrap_mode = 1
scroll_smooth = true
caret_blink = true
caret_blink_interval = 0.5
metadata/_edit_lock_ = true

[node name="HojaDecision" type="TextEdit" parent="Plantillas"]
layout_mode = 0
offset_left = -1000.0
offset_top = 26.0
offset_right = -791.0
offset_bottom = 582.0
theme_override_fonts/font = ExtResource("3_wkx8y")
text = "(si es la primera vez que lee esta historia, ver capítulo: #I)

#N - #TT

#TC

> Opción A:

#TA

(A) ver: #A

> Opción B:

#TB

(B) ver: #B"
context_menu_enabled = false
wrap_mode = 1
scroll_smooth = true
caret_blink = true
caret_blink_interval = 0.5
metadata/_edit_lock_ = true

[node name="HojaLineal" type="TextEdit" parent="Plantillas"]
layout_mode = 0
offset_left = -778.0
offset_top = 28.0
offset_right = -569.0
offset_bottom = 584.0
theme_override_fonts/font = ExtResource("3_wkx8y")
text = "(si es la primera vez que lee esta historia, ver capítulo: #I)

#N - #TT

#TC

> siguiente: #A"
context_menu_enabled = false
wrap_mode = 1
scroll_smooth = true
caret_blink = true
caret_blink_interval = 0.5
metadata/_edit_lock_ = true

[node name="HojaFin" type="TextEdit" parent="Plantillas"]
layout_mode = 0
offset_left = -549.0
offset_top = 28.0
offset_right = -340.0
offset_bottom = 584.0
theme_override_fonts/font = ExtResource("3_wkx8y")
text = "(si es la primera vez que lee esta historia, ver capítulo: #I)

#N - #TT

#TC

> Este es un final, gracias por leer!!!"
context_menu_enabled = false
wrap_mode = 1
scroll_smooth = true
caret_blink = true
caret_blink_interval = 0.5
metadata/_edit_lock_ = true

[node name="Documento" type="TextEdit" parent="Plantillas"]
layout_mode = 0
offset_left = -319.0
offset_top = 30.0
offset_right = -95.0
offset_bottom = 588.0
theme_override_fonts/font = ExtResource("3_wkx8y")
text = "Portada Inicial
#---
Título y Autor
#---
Acerca de la Obra
#---
Contenido Índices
#---
#ALL
#---
Mapa de Capítulos
#---
Anexos
#---
Biografía
#---
Portada Final"
context_menu_enabled = false
wrap_mode = 1
scroll_smooth = true
caret_blink = true
caret_blink_interval = 0.5
metadata/_edit_lock_ = true

[node name="Notas" type="TextEdit" parent="."]
layout_mode = 0
offset_left = -558.0
offset_top = 619.0
offset_right = -80.0
offset_bottom = 1256.0
theme_override_fonts/font = ExtResource("3_wkx8y")
context_menu_enabled = false
wrap_mode = 1
scroll_smooth = true
caret_blink = true
caret_blink_interval = 0.5
metadata/_edit_lock_ = true

[node name="LineaRoja" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 0, 0)
width = 6.0
default_color = Color(1, 0.243137, 0.211765, 1)
metadata/_edit_lock_ = true

[node name="Camara" type="Camera2D" parent="."]
position = Vector2(576, 324)
zoom = Vector2(3, 3)
metadata/_edit_lock_ = true

[node name="Guardando" type="Control" parent="Camara"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="Texto" type="Label" parent="Camara/Guardando"]
self_modulate = Color(1, 1, 0.403922, 0.603922)
layout_mode = 0
offset_left = -574.0
offset_top = 249.0
offset_right = -443.0
offset_bottom = 300.0
scale = Vector2(1.5, 1.5)
theme_override_fonts/font = ExtResource("3_wkx8y")
theme_override_font_sizes/font_size = 32
text = "Saved..."
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Fin" type="Timer" parent="Camara/Guardando"]
wait_time = 3.0
one_shot = true

[node name="Editor" type="Control" parent="Camara"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="Titulo" type="TextEdit" parent="Camara/Editor"]
layout_mode = 0
offset_left = 149.0
offset_top = -316.0
offset_right = 566.0
offset_bottom = -280.0
theme_override_fonts/font = ExtResource("3_wkx8y")
theme_override_font_sizes/font_size = 20
context_menu_enabled = false
wrap_mode = 1
scroll_smooth = true
caret_blink = true
caret_blink_interval = 0.5
metadata/_edit_lock_ = true

[node name="Contenido" type="TextEdit" parent="Camara/Editor"]
layout_mode = 0
offset_left = 149.0
offset_top = -275.0
offset_right = 566.0
offset_bottom = 146.0
theme_override_fonts/font = ExtResource("3_wkx8y")
theme_override_font_sizes/font_size = 18
context_menu_enabled = false
wrap_mode = 1
scroll_smooth = true
caret_blink = true
caret_blink_interval = 0.5
metadata/_edit_lock_ = true

[node name="Opciones" type="TextEdit" parent="Camara/Editor"]
layout_mode = 0
offset_left = 199.0
offset_top = 153.0
offset_right = 566.0
offset_bottom = 313.0
theme_override_fonts/font = ExtResource("3_wkx8y")
theme_override_font_sizes/font_size = 18
context_menu_enabled = false
wrap_mode = 1
scroll_smooth = true
caret_blink = true
caret_blink_interval = 0.5
metadata/_edit_lock_ = true

[node name="OpcionA" type="Button" parent="Camara/Editor"]
layout_mode = 0
offset_left = 151.0
offset_top = 154.0
offset_right = 193.0
offset_bottom = 227.0
focus_mode = 0
theme_override_fonts/font = ExtResource("3_wkx8y")
theme_override_font_sizes/font_size = 28
text = "A"
metadata/_edit_lock_ = true

[node name="OpcionB" type="Button" parent="Camara/Editor"]
layout_mode = 0
offset_left = 150.0
offset_top = 236.0
offset_right = 192.0
offset_bottom = 311.0
focus_mode = 0
theme_override_fonts/font = ExtResource("3_wkx8y")
theme_override_font_sizes/font_size = 28
disabled = true
text = "B"
metadata/_edit_lock_ = true

[node name="Redibuja" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="Mascara" to="." method="_on_mascara_pressed"]
[connection signal="pressed" from="Menu/BotExpHojas" to="." method="_on_bot_exp_hojas_pressed"]
[connection signal="pressed" from="Menu/BotExpDocum" to="." method="_on_bot_exp_docum_pressed"]
[connection signal="pressed" from="Menu/BotExpDatos" to="." method="_on_bot_exp_datos_pressed"]
[connection signal="pressed" from="Menu/BotImpDatos" to="." method="_on_bot_imp_datos_pressed"]
[connection signal="pressed" from="Menu/BotEjecutar" to="." method="_on_bot_ejecutar_pressed"]
[connection signal="toggled" from="Menu/VerImg" to="." method="_on_ver_img_toggled"]
[connection signal="drag_ended" from="Menu/SinTitulos" to="." method="_on_sin_titulos_drag_ended"]
[connection signal="drag_ended" from="Menu/SinTextos" to="." method="_on_sin_textos_drag_ended"]
[connection signal="drag_ended" from="Menu/SinOk" to="." method="_on_sin_textos_drag_ended"]
[connection signal="focus_exited" from="Plantillas/HojaInicio" to="." method="_on_hoja_inicio_focus_exited"]
[connection signal="focus_exited" from="Plantillas/HojaDecision" to="." method="_on_hoja_decision_focus_exited"]
[connection signal="focus_exited" from="Plantillas/HojaLineal" to="." method="_on_hoja_lineal_focus_exited"]
[connection signal="focus_exited" from="Plantillas/HojaFin" to="." method="_on_hoja_fin_focus_exited"]
[connection signal="focus_exited" from="Plantillas/Documento" to="." method="_on_documento_focus_exited"]
[connection signal="timeout" from="Camara/Guardando/Fin" to="." method="_on_fin_timeout"]
[connection signal="pressed" from="Camara/Editor/OpcionA" to="." method="_on_opcion_a_pressed"]
[connection signal="pressed" from="Camara/Editor/OpcionB" to="." method="_on_opcion_b_pressed"]
[connection signal="timeout" from="Redibuja" to="." method="_on_redibuja_timeout"]
